# XML-Resource

./: CMakeLists.txt  Reader.h  Tree.h  XMLTree.h  main.cpp  resource.xml
